# gossip-semantic

./: README.md
backend/: Dockerfile  Makefile  alembic.ini  docker-compose.yml  init.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 199c326a8f34_create_articles_table.py  f5f2727af4b3_create_ivfflat_index.py
backend/app/: app.py  database.py  embedding_model.py
backend/app/models/: Articles.py
backend/app/routers/articles/: inputs.py  types.py  views.py
backend/app/services/: articles.py
backend/scrapper/scrapper/: items.py  middlewares.py  pipelines.py  settings.py
backend/scrapper/scrapper/spiders/: public_sitemap_spider.py  vsd_sitemap_spider.py
backend/scripts/: compute_embeddings.py
backend/tests/: conftest.py
backend/tests/factories/: Article.py
backend/tests/services/articles/: test_services.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/api/: query.ts  reader.ts  types.ts
